--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
+      - uses: psf/black@stable
       - name: wheel
         run: |
           pip install build
