--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
-      - uses: psf/black@stable
+      - uses: psf/black@25.1.0
       - name: wheel
         run: |
           pip install build
